2004-01-05  Rodrigo Moya <rodrigo@ximian.com>

	* gui/gnome-cal.c (gnome_calendar_construct): display the tasks'
	primary selection in the task list, and actually open the tasks
	folder.

	* gui/e-tasks.c (e_tasks_set_default_uri): use the ECalModel to
	get the client for a given URI.

2004-01-04  Rodrigo Moya <rodrigo@ximian.com>

	* gui/calendar-component.c (add_uri_for_source,
	remove_uri_for_source): removed redundant functions.
	(update_uris_for_selection): dont call above functions, use
	gnome_calendar_* directly.

2003-12-29  Kidd Wang  <kidd.wang@sun.com>

	* gui/calendar-commands.c (file_open_event_cb): add a menu item
	for "open appointment".

	* gui/e-cal-view.[ch] (e_calendar_view_open_event): add a signal
	"open_event" and bind it to "ctrl+o". When the signal is delivered,
	a dialog will be opened to edit the selected event.

	* gui/e-calendar-table.c (e_calendar_table_on_key_press): press "ctrl-o"
	to open a dialog.

2003-12-24  JP Rosevear <jpr@ximian.com>

	* gui/e-select-names-renderer.c (esnr_start_editing): fix the
	signal name

	* gui/dialogs/meeting-page.glade: add Add Attendee button

	* gui/dialogs/meeting-page.c (get_widgets): extract add button
	(add_clicked_cb): edit the attendee after we add it
	(init_widgets): listen for add clicked
	(meeting_page_construct): the add button is in the glade file now

	* gui/e-select-names-editable.c (esne_start_editing): activate the
	control
	(e_select_names_editable_get_address): handle null dest
	(e_select_names_editable_get_name): ditto

	* gui/e-meeting-store.h: add proto

	* gui/e-meeting-store.c (e_meeting_store_find_attendee_path):
	create the path to a given attendee

	* gui/e-meeting-list-view.h: add proto

	* gui/e-meeting-list-view.c (e_meeting_list_view_edit): start
	editing the address of a particular

2003-12-22  Rodrigo Moya <rodrigo@ximian.com>

	* gui/gnome-cal.[ch] (gnome_calendar_add_event_source,
	gnome_calendar_remove_event_source): renamed from *_uri, to work with